--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -122,6 +122,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         
+      - name: Get Parameters from SSM
+        run: |
+          echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+        
       - name: Assume OIDC role
         uses: aws-actions/configure-aws-credentials@v4
         with:
