--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -159,7 +159,7 @@ jobs:
       
           echo "Fetching running ECS task ARN"
   
-          TASK_ARN=$(aws ecs list-tasks --cluster $ECS_CLUSTER --service-name $ECS_SERVICE --query 'taskArns[0]' --output text --region $AWS_REGION)
+          TASK_ARN=$(aws ecs list-tasks --cluster ${{env.ECS_CLUSTER}} --service-name ${{env.ECS_SERVICE}} --query 'taskArns[0]' --output text --region ${{env.AWS_REGION}})
 
           if [[ -z "$TASK_ARN" || "$TASK_ARN" == "None" ]]; then
           echo "❌ Error: No running tasks found in ECS service!"
@@ -169,7 +169,7 @@ jobs:
           echo "✅ Running ECS Task ARN: $TASK_ARN"
       
           echo "Fetching running ECS Task image SHA from container"
-          RUNNING_IMAGE_SHA=$(aws ecs describe-tasks --cluster $ECS_CLUSTER --tasks $TASK_ARN --query "tasks[0].containers[?name=='$CONTAINER_NAME'].imageDigest" --output text --region $AWS_REGION)
+          RUNNING_IMAGE_SHA=$(aws ecs describe-tasks --cluster ${{env.ECS_CLUSTER}} --tasks $TASK_ARN --query "tasks[0].containers[?name=='${{env.CONTAINER_NAME}}'].imageDigest" --output text --region ${{env.AWS_REGION}})
       
           if [[ -z "$RUNNING_IMAGE_SHA" || "$RUNNING_IMAGE_SHA" == "None" ]]; then
           echo "❌ Error: Unable to fetch image digest from running ECS Task!"
