--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
           echo "Triggered by: ${{ github.triggering_actor }}"
 
   ecr-push:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: build
     permissions:
       id-token: write
@@ -65,7 +65,7 @@ jobs:
           docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_REPO_NAME }}:${{ env.IMAGE_TAG }}
 
   ecs-deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: ecr-push
     permissions:
       id-token: write
@@ -114,7 +114,7 @@ jobs:
           aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --desired-count $desired_task_count
   
   ecr-ecs-image-sha-checking:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest #self-hosted
     needs: ecs-deploy
     permissions:
       id-token: write
@@ -136,18 +136,20 @@ jobs:
 
       - name: Compares ECS Task image SHA with the latest ECR image SHA
         run: |
-          echo "IMAGE_REPO_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecrname" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
-          echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
-          echo "ECS_CLUSTER=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecscluster" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
-          echo "ECS_SERVICE=$(aws ssm get-parameter --name "/GithubAction/demo/Servicename/Ecsservice" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
-          echo "CONTAINER_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Container/Containername" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
-      - name: print the parameterstore values
+          echo "IMAGE_REPO_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecrname" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
+          echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
+          echo "ECS_CLUSTER=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecscluster" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
+          echo "ECS_SERVICE=$(aws ssm get-parameter --name "/GithubAction/demo/Servicename/Ecsservice" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
+          echo "CONTAINER_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Container/Containername" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
+  
+      - name: Debug Environment Variables
         run: |
-          echo "ECS_CLUSTER: $ECS_CLUSTER"
-          echo "ECS_SERVICE: $ECS_SERVICE"
-          echo "AWS_REGION: $AWS_REGION"
-          echo "CONTAINER_NAME: $CONTAINER_NAME"
-
+          echo "ECS_CLUSTER: ${{ env.ECS_CLUSTER }}"
+          echo "ECS_SERVICE: ${{ env.ECS_SERVICE }}"
+          echo "AWS_REGION: ${{ env.AWS_REGION }}"
+          echo "CONTAINER_NAME: ${{ env.CONTAINER_NAME}}"
+          echo "IMAGE_REPO_NAME: ${{ env.IMAGE_REPO_NAME}}"
+          
           echo "Fetching latest image SHA from ECR"
           LATEST_IMAGE_SHA=$(aws ecr describe-images --repository-name ${{env.IMAGE_REPO_NAME}} --query 'sort_by(imageDetails,&imagePushedAt)[-1].imageDigest' --output text --region ${{env.AWS_REGION}})
           if [[ -z "$LATEST_IMAGE_SHA" || "$LATEST_IMAGE_SHA" == "None" ]]; then
