--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -73,12 +73,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Get Parameters from SSM
-        run: |
-          echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
-          echo "ECS_CLUSTER=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecscluster" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
-          echo "ECS_SERVICE=$(aws ssm get-parameter --name "/GithubAction/demo/Servicename/Ecsservice" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
-          
+
       - name: Assume OIDC role
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -86,14 +81,20 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           role-session-name: githuboidctest
           
-      - name: Debug Variables
+      - name: Get Parameters from SSM
         run: |
-          echo "Using ECS_CLUSTER: ${{ env.ECS_CLUSTER }}"
-          echo "Using ECS_SERVICE: ${{ env.ECS_SERVICE }}"
-          if [[ -z "${{ env.ECS_CLUSTER }}" || -z "${{ env.ECS_SERVICE }}" ]]; then
-            echo "Error: Missing required environment variables!"
-            exit 1
-          fi
+          echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+          echo "ECS_CLUSTER=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecscluster" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+          echo "ECS_SERVICE=$(aws ssm get-parameter --name "/GithubAction/demo/Servicename/Ecsservice" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+          
+      # - name: Debug Variables
+      #   run: |
+      #     echo "Using ECS_CLUSTER: ${{ env.ECS_CLUSTER }}"
+      #     echo "Using ECS_SERVICE: ${{ env.ECS_SERVICE }}"
+      #     if [[ -z "${{ env.ECS_CLUSTER }}" || -z "${{ env.ECS_SERVICE }}" ]]; then
+      #       echo "Error: Missing required environment variables!"
+      #       exit 1
+      #     fi
       
       - name: Deployment to ECS
         run: |
