--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -35,13 +35,17 @@ jobs:
       id-token: write
       contents: read
     steps:
+      - name: Get Parameters from SSM
+        run: |
+          echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
+          
       - name: Checkout code
         uses: actions/checkout@v4
       
       - name: Assume OIDC role
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: us-east-1
+          aws-region: ${{ env.AWS_REGION }}
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           role-session-name: githuboidctest
       
@@ -50,7 +54,7 @@ jobs:
           echo "IMAGE_REPO_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecrname" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
           echo "IMAGE_TAG=$(aws ssm get-parameter --name "/GithubAction/demo/Tag/Imagetag" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
           echo "AWS_ACCOUNT_ID=$(aws ssm get-parameter --name "/GithubAction/demo/Account/Accountid" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
-          echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+          #echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
           echo "ECS_CLUSTER=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecscluster" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
           echo "ECS_SERVICE=$(aws ssm get-parameter --name "/GithubAction/demo/Servicename/Ecsservice" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
       
