--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Get Parameters from SSM
         run: |
           echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
+
+      - name: Debug AWS_REGION
+        run: echo "AWS_REGION is ${{ env.AWS_REGION }}"
           
       - name: Checkout code
         uses: actions/checkout@v4
