--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     permissions:
       id-token: write  # Required for OIDC authentication
       contents: read
-    runs-on: self-hosted
+    runs-on: [self-hosted, paramesh-runner]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -34,7 +34,7 @@ jobs:
     permissions:
       id-token: write  # Required for OIDC authentication
       contents: read
-    runs-on: self-hosted 
+    runs-on: [self-hosted, runner-2]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
